--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,7 +1,3 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root@localhost:3306/warehouse_ecommerce"
-MAIL_USER = "timothyjason8899@gmail.com"
-MAIL_PASS = "veqo fwon iitr azyy"
-NEXT_PUBLIC_SECRET=SB-Mid-server-6tUhx5tE6mbWmxAuB2bomxcR
-NEXT_PUBLIC_API=https://app.sandbox.midtrans.com/snap/v1/transactions
+DATABASE_URL="mysql://root@localhost:3306/myDb"
