--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,11 +20,13 @@
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "prisma": "^5.7.1",
     "tsconfig-paths": "^4.2.0"
   }
