--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "prisma": "^5.7.1",
     "tsconfig-paths": "^4.2.0"
   }
