--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.390.0",
     "next": "14.0.4",
     "react": "^18",
