build(api): modified schema & re-migrated prisma schema. Added database_url, key_jwt, mailer on .env

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root@localhost:3306/mydb"
+DATABASE_URL="mysql://root:Mysql123-@localhost:3306/finpro"
+KEY_JWT="secret"
+MAIL_USER="weardrobe2000@gmail.com"
+MAIL_PASS="hjds zqye zbij ocet"
