--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
