--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.390.0",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
