--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     }
   },
   "dependencies": {
-    "firebase": "^10.12.2",
     "embla-carousel-react": "^8.1.3",
-    "init": "^0.1.2"
+    "firebase": "^10.12.2",
+    "init": "^0.1.2",
+    "query-string": "^9.0.0"
   }
 }
