fix: added db seeding for users & admins

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "prisma": {
+  "seed": "ts-node prisma/seed.ts"
+    },
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
     "build": "tsc && tsc-alias",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma": "npx prisma",
-    "seed": "ts-node prisma/seed.ts"
+    "prisma": "npx prisma"
   },
   "author": "",
   "license": "ISC",
