--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
     "js-cookie": "^3.0.5",
+    "json-as-xlsx": "^2.5.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
     "maplibre-gl": "^4.4.1",
@@ -53,6 +54,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "sonner": "^1.5.0",
+    "split-on-first": "^3.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.1",
