--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "sonner": "^1.5.0",
     "split-on-first": "^3.0.0",
