--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
     "js-cookie": "^3.0.5",
+    "json-as-xlsx": "^2.5.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
     "maplibre-gl": "^4.4.1",
