--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-roving-focus": "^1.1.0",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
     "init": "^0.1.2",
