fix: added public url on .env.development for nodemailer link

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -10,4 +10,5 @@ MIDTRANS_PUBLIC_SECRET=SB-Mid-server-6tUhx5tE6mbWmxAuB2bomxcR
 MIDTRANS_PUBLIC_API=https://app.sandbox.midtrans.com/snap/v1/transactions
 NEXT_PUBLIC_RAJA_ONGKIR_API_KEY=7e832a8393a738ded1ec9a6f192f55a5
 NEXT_PUBLIC_BASE_API_URL=https://jcwd030801.purwadhikabootcamp.com/api/
+PUBLIC_URL=https://jcwd030801.purwadhikabootcamp.com/
 LOCAL_URL=http://localhost:3000/
