--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,13 +1,15 @@
 NODE_ENV=development
 PORT=8000
-# SHADOW_DATABASE_URL="mysql://root:arya13@localhost:3306/finpro"
-# DATABASE_URL="mysql://jcwd030801:group1@adminer.purwadhikabootcamp.com:3306/jcwd030801"
-DATABASE_URL="mysql://root:arya13@localhost:3306/finpro"
+# SHADOW_DATABASE_URL="mysql://root:Mysql123-@localhost:3306/finpro"
+# DATABASE_URL="mysql://root:arya13@localhost:3306/finpro"
+DATABASE_URL="mysql://jcwd030801:group1@adminer.purwadhikabootcamp.com:3306/jcwd030801"
 KEY_JWT="secret"
 MAIL_USER="weardrobe2000@gmail.com"
 MAIL_PASS="hjds zqye zbij ocet"
 MIDTRANS_PUBLIC_SECRET=SB-Mid-server-6tUhx5tE6mbWmxAuB2bomxcR
 MIDTRANS_PUBLIC_API=https://app.sandbox.midtrans.com/snap/v1/transactions
-NEXT_PUBLIC_RAJA_ONGKIR_API_KEY=46b3904cac63f29df6dd94ebeeb232eb
-
-
+NEXT_PUBLIC_RAJA_ONGKIR_API_KEY=7e832a8393a738ded1ec9a6f192f55a5
+NEXT_PUBLIC_BASE_API_URL=https://jcwd030801.purwadhikabootcamp.com/api/
+# NEXT_PUBLIC_BASE_API_URL=https://localhost:3000/api/
+PUBLIC_URL=https://jcwd030801.purwadhikabootcamp.com/
+LOCAL_URL=http://localhost:3000/
