--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=8000
 # SHADOW_DATABASE_URL="mysql://root:Mysql123-@localhost:3306/finpro"
-# DATABASE_URL="mysql://root:arya13@localhost:3306/finpro"
-DATABASE_URL="mysql://jcwd030801:group1@adminer.purwadhikabootcamp.com:3306/jcwd030801"
+DATABASE_URL="mysql://root:arya13@localhost:3306/finpro"
+# DATABASE_URL="mysql://jcwd030801:group1@adminer.purwadhikabootcamp.com:3306/jcwd030801"
 KEY_JWT="secret"
 MAIL_USER="weardrobe2000@gmail.com"
 MAIL_PASS="hjds zqye zbij ocet"
