fix: deploy config

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,13 +6,13 @@
   "prisma": {
   "seed": "ts-node prisma/seed.ts"
     },
-"scripts": {
-  "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
-  "build": "tsc && tsc-alias && xcopy /E /I /Y src\\templates dist\\src\\templates",
-  "serve": "cross-env NODE_ENV=production node dist/src/index.js",
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "prisma": "npx prisma"
-},
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "build": "tsc && tsc-alias && cp -r src/templates dist/src/",
+    "serve": "cross-env NODE_ENV=production node dist/src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma": "npx prisma"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
