--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,6 +1,5 @@
 NODE_ENV=development
 PORT=8000
-# SHADOW_DATABASE_URL="mysql://root@localhost:3306/warehouse_ecommerce"
 DATABASE_URL="mysql://jcwd030801:group1@adminer.purwadhikabootcamp.com:3306/jcwd030801"
 KEY_JWT="secret"
 MAIL_USER="weardrobe2000@gmail.com"
@@ -9,6 +8,6 @@ MIDTRANS_PUBLIC_SECRET=SB-Mid-server-6tUhx5tE6mbWmxAuB2bomxcR
 MIDTRANS_PUBLIC_API=https://app.sandbox.midtrans.com/snap/v1/transactions
 NEXT_PUBLIC_RAJA_ONGKIR_API_KEY=2ee6bfb8d34307a69ef73fa6e6b77983
 NEXT_PUBLIC_BASE_API_URL=https://jcwd030801.purwadhikabootcamp.com/api/
-# NEXT_PUBLIC_BASE_API_URL=https://localhost:3000/api/
 PUBLIC_URL=https://jcwd030801.purwadhikabootcamp.com/
 LOCAL_URL=http://localhost:3000/
+CLIENT_URL=https://jcwd030801.purwadhikabootcamp.com/
