--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd apps/api && npx prisma generate && cd ../.. && npm run build",
-  "outputDirectory": "/.next",
+  "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "rewrites": [
     {
