fix: try vercel 6

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "nextjs",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "destination": "/api"
     },
     {
