--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
   "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
   "build": "tsc && tsc-alias && cp -r src/templates dist/src/",
   "serve": "cross-env NODE_ENV=production node dist/src/index.js",
-  "start": "cross-env NODE_ENV=production node dist/src/index.js",
+  "start": "cross-env NODE_ENV=production node src/index.js",
   "test": "echo \"Error: no test specified\" && exit 1",
   "prisma": "npx prisma"
 },
