fix: fix vercel.json

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,21 +1,2 @@
-{
-    "version": 2,
-    "builds": [
-        {
-            "src": "src/app.ts",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/index.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ]
-        }
-    ]
-}
+{ "version": 2, "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }] }
+
