--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,2 +1,2 @@
-{ "version": 2, "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }] }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
 
