--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/index.ts",
+        "src": "api/src/index.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/index.ts"
+        "dest": "api/src/index.ts"
       }
     ]
   }
