--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
-  "buildCommand": "cd apps/api && npx prisma generate && cd ../.. && npm run build",
-  "outputDirectory": "apps/web/.next",
-  "framework": "nextjs",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "src": "apps/api/src/index.ts",
+      "use": "@vercel/node"
     },
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "apps/web/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/apps/api/src/index.ts"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/apps/web/.next/$1"
     }
   ]
 }
