--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "src/index.ts",
   "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-    },
-"scripts": {
-  "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
-  "build": "tsc && tsc-alias && cp -r src/templates dist/src/",
-  "serve": "cross-env NODE_ENV=production node dist/src/index.js",
-  "prepare": "husky install",
-  "start": "node dist/src/index.js",
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "prisma": "npx prisma"
-},
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "build": "tsc && tsc-alias && cp -r src/templates dist/src/",
+    "serve": "cross-env NODE_ENV=production node dist/src/index.js",
+    "prepare": "husky install",
+    "start": "node dist/src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma": "npx prisma"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -42,6 +42,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
+    "husky": "^9.1.3",
     "prisma": "^5.7.1",
     "tsconfig-paths": "^4.2.0"
   }
